made it ersponsive for mobile

--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
-  </head>
-  <body>
-    <section>
-      <div class="parent-grid">
-        <div class="first-child">
+</head>
+<body>
+    <section class="container">
+        <div class="item item-1">
             <div class="image"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum reiciendis molestias soluta illo aliquam impedit laudantium, veniam cum, delectus alias perferendis deserunt nemo, consectetur iusto. Repellat expedita placeat enim asperiores!</p>
+            <p class="about">I am Abdul-mateen, a software engineer with 2 years of experience. I currently school at the University
+                of Ilorin, Nigeria, studying Computer Science.
+            </p>
         </div>
-        <div class="second-child">
-            <div class="first-grand-child">
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
+        <div class="bottom-items">
+            <div class="item item-2">
+                <p class="hobbies">Coding: I like programming and currently enjoying designing too.</p>
+                <p class="hobbies">Sport: I actually participate in lots of sports like football, basketball, tennis, and more.</p>
             </div>
-            <div class="second-grand-child">
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
+            <div class="item item-3">
+                <p class="aspiration">My aspiration is to become a world-class software engineer, building innovative solutions that make a positive impact on people's lives. I want to work on cutting-edge technologies and contribute to open-source projects while continuously learning and growing in my field.</p>
             </div>
         </div>
-      </div>
     </section>
-  </body>
+    <section>
+        <button>Click Me</button>
+    </section>
+</body>
 </html>
