--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="container">
         <div class="item item-1">
-            <div class="image"></div>
+                <img src="./Abdul passport.jpg" alt="Abdul" />
             <p class="about">I am Abdul-mateen, a software engineer with 2 years of experience. I currently school at the University
                 of Ilorin, Nigeria, studying Computer Science.
             </p>
@@ -23,9 +23,6 @@
                 <p class="aspiration">My aspiration is to become a world-class software engineer, building innovative solutions that make a positive impact on people's lives. I want to work on cutting-edge technologies and contribute to open-source projects while continuously learning and growing in my field.</p>
             </div>
         </div>
-    </section>
-    <section>
-        <button>Click Me</button>
     </section>
 </body>
 </html>
